spring-boot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: documanque-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: documanque-server
  template:
    metadata:
      labels:
        app: documanque-server
    spec:
      containers:
        - name: documanque-server
          image: zakarialagraini/documanque-server:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: documanque-server-service
spec:
  selector:
    app: documanque-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
