ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: documanque-ingress
spec:
  rules:
    - host: documanque.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: documanque-client-service
                port:
                  number: 80
